src/objects/pse__Skill__c.object
<CustomObject>
    <customHelpPage>pse__SkillHelp</customHelpPage>
    <description>Records a certain competency or accreditation. Use skills/certifications to describe staffing requirements for projects and to track individual resource competencies.</description>
    <fields>
        <fullName>pse__Certification_Source__c</fullName>
        <label>Certification Source</label>
        <picklist>
            <picklistValues>
                <fullName>Salesforce.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cisco</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pse__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__Group__c</fullName>
        <label>Group</label>
        <picklist>
            <picklistValues>
                <fullName>Microsoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce.com</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pse__Skill_Or_Certification__c</fullName>
        <label>Skill Or Certification</label>
        <picklist>
            <picklistValues>
                <fullName>Skill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certification</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pse__Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical &amp; Architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Programming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Architecture</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pse__Unique_Name__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Unique Name</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Skill / Certification</label>
    <listViews>
        <fullName>pse__All</fullName>
        <columns>NAME</columns>
        <columns>pse__Group__c</columns>
        <columns>pse__Type__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Skill / Certification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Skills and Certifications</pluralLabel>
    <recordTypes>
        <fullName>pse__Certification</fullName>
        <active>true</active>
        <label>Certification</label>
    </recordTypes>
    <recordTypes>
        <fullName>pse__Skill</fullName>
        <active>true</active>
        <label>Skill</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>